写完user的test